# stellar-mcp

./: .env.example  README.md  USAGE.md  agent-keys.txt  package.json  pnpm-lock.yaml
docs/: STELLAR_MCP_STANDARD.md  security.md
docs/plans/: 2026-02-22-mcp-client-sdk-prd.md
examples/: README.md
examples/node-app/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/python-server-app/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
examples/web-app/: .env.example  .gitignore  (+5 more)
src/: mcp-server.ts  test.ts  utils.ts
stellar-mcp-generator/: CHANGELOG.md  Cargo.toml  README.md  stellar-plugin.json
stellar-mcp-generator/src/: lib.rs  main.rs
stellar-mcp-generator/src/commands/: generate.rs  mod.rs  validate.rs
stellar-mcp-generator/src/generator/: frontend_generator.rs  mcp_generator.rs  mod.rs  pydantic_schemas.rs  python_generator.rs  template_data.rs  templates.rs
stellar-mcp-generator/src/spec/: fetcher.rs  mod.rs  parser.rs  types.rs
stellar-mcp-generator/src/wizard/: mod.rs
stellar-mcp-generator/templates/: Dockerfile.hbs  README.md.hbs  env.example.hbs  index.ts.hbs  launchtube.ts.hbs  package.json.hbs  passkey.ts.hbs  relayer.ts.hbs  schemas.ts.hbs  tools.ts.hbs  transaction.ts.hbs  types.ts.hbs  vercel.json.hbs
stellar-mcp-generator/templates/python/: Dockerfile.hbs  README.md.hbs  contract_client.py.hbs  env.example.hbs  init.py.hbs  pyproject.toml.hbs  server.py.hbs
stellar-mcp-generator/templates/python/lib/: __init__.py.hbs  submit.py.hbs  utils.py.hbs
stellar-mcp-generator/tests/: deployment_tests.rs  frontend_generator_test.rs  pydantic_schema_tests.rs  python_generator_test.rs  spec_tests.rs  template_tests.rs
stellar-policy-cli/: .gitignore  Cargo.toml  README.md  TESTING.md  WIZARD.md  stellar-plugin.json  test-policy-caller.rs
stellar-policy-cli/src/: lib.rs  main.rs  types.rs
stellar-policy-cli/src/commands/: generate.rs  mod.rs
stellar-policy-cli/src/generator/: mod.rs  project_builder.rs  template_data.rs  templates.rs
stellar-policy-cli/src/wizard/: analyzer.rs  enhanced.rs  mod.rs  questions.rs
stellar-policy-cli/templates/: DEMO.md.hbs  Makefile.hbs  README.md.hbs  env.example.hbs
stellar-policy-cli/templates/contract/: lib.rs.hbs  test.rs.hbs  types.rs.hbs
stellar-policy-cli/templates/integration/: package.json.hbs  tsconfig.json.hbs  typescript-example.ts.hbs
stellar-policy-cli/templates/scripts/: fix-bindings.sh
stellar-policy-cli/templates/workspace/: Cargo.toml.hbs  policy-Cargo.toml.hbs
stellar-policy-cli/tests/: build_test.rs  integration_test.rs  localnet_integration_test.rs  manual_gen_test.rs  manual_test.rs  quick_verify_test.rs
(+81 files in other folders)
